# mpiMarkDup

./: MPI.supp  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
functional-tests/cc/: cluster.sam  cluster1.sam  cluster2.sam  cluster3.sam  clusterandchr.sam
functional-tests/cluster/: base.sam  flagF.sam  ignoreCigar.sam  ignoreCigar1.sam  ignoreMAPQ.sam  markedByName.sam  normalCase.sam  random.sam
functional-tests/flag/: 137andCC.sam
functional-tests/incoherent/: localdata.sam  localdataC.sam
functional-tests/others/: fileOrder.sam  pairIn2Coord.sam  readAndMateInSameCluster.sam  readAndMateSecInCluster.sam  readAndMateSecInCluster2.sam  readAndMateSecInCluster3.sam  readAndMateSecInCluster4.sam  readReverseStrand.sam  readReverseStrand2.sam  readReverseStrand3.sam  readReverseStrand4.sam  readReverseStrand5.sam  readReverseStrand6.sam  readReverseStrand7.sam  readReverseStrand8.sam  reverse-strand.sam  softClippedPlusUnmapped.sam  twoUnmappedInSamePos.sam  twoUnmappedInSamePos2.sam
functional-tests/qname/: 1Read2Mates.sam  2Read2Mates.sam  diffCigar1_2Read2Mates.sam  diffCigar2_2Read2Mates.sam  diffCigar_2Read2Mates.sam  diffCoor_2Read2Mates.sam  diffchr_2Read2Mates.sam  same_2Read2Mates.sam
scripts/: README.md  cmpWithMD.sh  compareMpiMDMarkDuplicates.sh  compareSAMWithExternalTools.sh  runCmpOnDir.sh
scripts/oldscript/: compareSAMAlpha.sh  compareSAMBeta.sh
singularity/: mpimarkdup_centos7.def
src/: Makefile  Makefile.am  Makefile.in  bgzf.c  common.h  compat.h  configure.ac  createLBList.c  createLBList.h  llist.c  llist.h  log.c  log.h  mark_duplicates.c  mark_duplicates.h  mark_duplicates_discordant.c  mark_duplicates_discordant.h  mergeSort.c  mergeSort.h  mpiMD_utils.c  mpiMD_utils.h  mpiSort.c  mpiSort_utils.c  mpiSort_utils.h  parabitonicsort.c  parabitonicsort.h  parabitonicsort2.c  parabitonicsort2.h  parabitonicsort3.c  parabitonicsort3.h  parser.c  parser.h  perfectHash.c  perfectHash.h  preWrite.c  preWrite.h  qksort.c  qksort.h  reads.c  reads.h  (+8 more)
unit-tests/: Makefile  TestClusterFunctions.c  TestLBList.c  TestList.c  TestLlist.c  TestPerfectHash.c  TestUtils.c
